--- a/src/app/action-items/action-items.component.css
+++ b/src/app/action-items/action-items.component.css
@@ -1,8 +1,113 @@
-table {
-    width: 70%;
-    margin: 100px;
+/* flex datatable */
+
+* {
+    font-size: 16px;
 }
 
-.table-head {
-    margin-bottom: 50px;
+:root {
+    --table-header: rgb(10, 44, 51);
+    --table-header-border: rgb(10, 44, 51);
+    --table-border: #d9d9d9;
+    --row-bg: #f4f2f1;
+}
+
+div {
+    box-sizing: border-box;
+}
+
+.table-container {
+    display: block;
+    margin: 2em auto;
+    width: 80%;
+    /* max-width: 600px; */
+    box-shadow: 0 6px 6px 0 rgb(148, 143, 143), 0 6px 15px 0 rgb(148, 143, 143);
+}
+
+.flag-icon {
+    margin-right: 0.1em;
+}
+
+.flex-table {
+    display: flex;
+    flex-flow: row wrap;
+    border-left: solid 1px var(--table-border);
+    transition: 0.5s;
+}
+
+.flex-table:first-of-type {
+    border-left: solid 1px var(--table-header-border);
+}
+
+.flex-table:first-of-type .flex-row {
+    background: var(--table-header);
+    color: rgb(104, 100, 100);
+    border-color: var(--table-header-border);
+}
+
+.flex-table.row:nth-child(odd) .flex-row {
+    background: var(--row-bg);
+}
+
+.flex-table:hover {
+    background: #f5f5f5;
+    transition: 500ms;
+}
+
+.flex-row {
+    width: calc(100% / 5);
+    text-align: center;
+    padding: 10px;
+    /* padding-top: 10px;
+    padding-bottom: 10px; */
+    border-right: solid 1px var(--table-border);
+    border-bottom: solid 1px var(--table-border);
+}
+
+.rowspan {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.column {
+    display: flex;
+    flex-flow: column wrap;
+    width: 75%;
+    padding: 0;
+}
+
+.column.flex-row {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    padding: 0;
+    border: 0;
+    border-bottom: solid 1px var(--table-border);
+}
+
+.column.flex-row:hover {
+    background: #f5f5f5;
+    transition: 500ms;
+}
+
+.body-cell {
+    font-size: 14px;
+}
+
+.flex-cell {
+    width: calc(100% / 3);
+    text-align: center;
+    padding: 0.5em 0.5em;
+    border-right: solid 1px var(--table-border);
+    flex: 1 1 33.3%;
+}
+
+.flex-cell:last-child {
+    border-right: 0;
+}
+
+.flex-table.header {
+    margin-bottom: 10px;
+    padding: 10px 0;
 }
