--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -1,32 +1,19 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="table-container" role="table" aria-label="Tasks">
+    <div class="flex-table header" role="rowgroup">
+        <div class="flex-row" role="columnheader">Title</div>
+        <div class="flex-row" role="columnheader">Type</div>
+        <div class="flex-row" role="columnheader">Completed</div>
+        <div class="flex-row" role="columnheader">Due Date</div>
+        <div class="flex-row" role="columnheader">Days Left</div>
+    </div>
 
-    <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>Title</th>
-        <td mat-cell *matCellDef="let el">{{el.title}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef>Type</th>
-        <td mat-cell *matCellDef="let el"> {{el.type}} </td>
-    </ng-container>
-
-
-    <ng-container matColumnDef="completed">
-        <th mat-header-cell *matHeaderCellDef>Completed</th>
-        <td mat-cell *matCellDef="let el"> {{el.completed}} </td>
-    </ng-container>
-
-
-    <ng-container matColumnDef="dueDate">
-        <th mat-header-cell *matHeaderCellDef>Due Date</th>
-        <td mat-cell *matCellDef="let el"> {{el.dueDate}} </td>
-    </ng-container>
-
-
-    <ng-container matColumnDef="daysLeft">
-        <th mat-header-cell *matHeaderCellDef>Days Left</th>
-        <td mat-cell *matCellDef="let el"> {{el.daysLeft}} </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <div class="flex-table row" role="rowgroup" *ngFor="let t of dataSource">
+        <div class="flex-row body-cell" role="cell">
+            {{ t.title }}
+        </div>
+        <div class="flex-row body-cell" role="cell">{{ t.type }}</div>
+        <div class="flex-row body-cell" role="cell">{{ t.completed }}</div>
+        <div class="flex-row body-cell" role="cell">{{ t.dueDate }}</div>
+        <div class="flex-row body-cell" role="cell">{{ t.daysLeft }}</div>
+    </div>
+</div>
