--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,7 @@
 <!-- top  menu -->
-
 <div class="menu-container">
-
     <div class="top-row">
-
-
-
         <div class="menu-wrapper">
-
             <nav class="menu">
                 <div class="menu-items">
                     <a href="#">products</a>
@@ -15,13 +9,9 @@
                     <a href="#">inbox</a>
                 </div>
             </nav>
-
         </div>
-
         <div class="navbar-title">
-            <div class="navbar-icon">
-
-            </div>
+            <div class="navbar-icon"></div>
             <div class="navbar-paragraph">
                 <p>All Projects</p>
             </div>
