--- a/src/app/action-items/action-items.component.css
+++ b/src/app/action-items/action-items.component.css
@@ -19,7 +19,6 @@ div {
     display: block;
     margin: 2em auto;
     width: 80%;
-    /* max-width: 600px; */
     box-shadow: 0 6px 6px 0 rgb(148, 143, 143), 0 6px 15px 0 rgb(148, 143, 143);
 }
 
@@ -38,27 +37,31 @@ div {
     border-left: solid 1px var(--table-header-border);
 }
 
-.flex-table:first-of-type .flex-row {
-    background: var(--table-header);
-    color: rgb(104, 100, 100);
-    border-color: var(--table-header-border);
+.flex-table:first-of-type {
+    .flex-row {
+        background: var(--table-header);
+        color: rgb(104, 100, 100);
+        border-color: var(--table-header-border);
+    }
 }
 
-.flex-table.row:nth-child(odd) .flex-row {
-    background: var(--row-bg);
+.flex-table.row:nth-child(odd) {
+    .flex-row {
+        background: var(--row-bg);
+    }
 }
 
-.flex-table:hover {
-    background: #f5f5f5;
-    transition: 500ms;
+.flex-table {
+    &:hover {
+        background-color: #f5f5f5;
+        transition: 500ms;
+    }
 }
 
 .flex-row {
     width: calc(100% / 5);
     text-align: center;
     padding: 10px;
-    /* padding-top: 10px;
-    padding-bottom: 10px; */
     border-right: solid 1px var(--table-border);
     border-bottom: solid 1px var(--table-border);
 }
@@ -75,20 +78,18 @@ div {
     flex-flow: column wrap;
     width: 75%;
     padding: 0;
-}
-
-.column.flex-row {
-    display: flex;
-    flex-flow: row wrap;
-    width: 100%;
-    padding: 0;
-    border: 0;
-    border-bottom: solid 1px var(--table-border);
-}
-
-.column.flex-row:hover {
-    background: #f5f5f5;
-    transition: 500ms;
+    .flex-row {
+        display: flex;
+        flex-flow: row wrap;
+        width: 100%;
+        padding: 0;
+        border: 0;
+        border-bottom: solid 1px var(--table-border);
+        &:hover {
+            background: #f5f5f5;
+            transition: 500ms;
+        }
+    }
 }
 
 .body-cell {
@@ -107,7 +108,9 @@ div {
     border-right: 0;
 }
 
-.flex-table.header {
-    margin-bottom: 10px;
-    padding: 10px 0;
+.flex-table {
+    .header {
+        margin-bottom: 10px;
+        padding: 10px 0;
+    }
 }
