"usage of an observable in the tasks.service.ts"

--- a/src/app/action-items/action-items.component.css
+++ b/src/app/action-items/action-items.component.css
@@ -114,3 +114,12 @@ div {
         padding: 10px 0;
     }
 }
+
+.spinner {
+    text-align: center;
+    margin-top: 100px;
+}
+
+.fa {
+    font-size: 100px;
+}
