--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,19 +1,27 @@
 .menu-container {
     padding-bottom: 25px;
     display: flex;
-    padding-left: 100px;
-    background-color: rgb(10, 44, 51);
+    padding-left: 115px;
+    background-color: #003c4d;
+    height: 122px;
+}
+
+.menu-wrapper {
+    padding-top: 18px;
 }
 
 a {
-    padding: 0 20px;
-    padding-top: 10px;
+    font-size: 12px;
+    color: #ffffff;
+    font-family: Roboto;
+    letter-spacing: 0.36px;
+    line-height: 1.2rem;
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
     text-align: center;
-    font-size: 10px;
-    color: white;
+    padding: 0 20px;
+    padding-top: 10px;
 }
 
 a:hover {
@@ -23,8 +31,10 @@ a:hover {
 }
 
 .navbar-paragraph p {
-    font-size: 20px;
+    font-size: 23px;
+    color: #ffffff;
+    font-family: Roboto;
+    font-weight: 300;
     padding-left: 20px;
     padding-top: 10px;
-    color: white;
 }
