--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -22,7 +22,9 @@
     </div>
     <div class="flex-table row" role="rowgroup" *ngFor="let t of dataSource">
         <div class="flex-row body-cell first" role="cell">
-            <div class="title-container"><i class="fa fa-circle" style="font-size: 10px;"></i></div>
+            <div class="title-container">
+                <i class="fa fa-circle" id="circle" style="font-size: 10px;"></i>
+            </div>
             <div class="title-container">
                 <p class="action-item-name">{{ t.title }}</p>
                 <p class="action-item-name project-name">{{ t.projectName }}</p>
@@ -31,6 +33,6 @@
         <div class="flex-row body-cell" role="cell">{{ t.type }}</div>
         <div class="flex-row body-cell" role="cell">{{ t.completed }}</div>
         <div class="flex-row body-cell" role="cell">{{ t.dueDate }}</div>
-        <div class="flex-row body-cell" role="cell"></div>
+        <div class="flex-row body-cell" role="cell">{{ t.dueDay }}</div>
     </div>
 </div>
