--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,9 +4,9 @@
         <div class="menu-wrapper">
             <nav class="menu">
                 <div class="menu-items">
-                    <a href="#">products</a>
-                    <a href="#">action items</a>
-                    <a href="#">inbox</a>
+                    <a class="menu-link" href="#">products</a>
+                    <a class="menu-link" href="#">action items</a>
+                    <a class="menu-link" href="#">inbox</a>
                 </div>
             </nav>
         </div>
