--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Roboto;
+}
+
 .menu-container {
     padding-bottom: 25px;
     display: flex;
@@ -10,10 +14,9 @@
     padding-top: 18px;
 }
 
-a {
+.menu-link {
     font-size: 12px;
     color: #ffffff;
-    font-family: Roboto;
     letter-spacing: 0.36px;
     line-height: 1.2rem;
     text-decoration: none;
@@ -33,7 +36,6 @@ a:hover {
 .navbar-paragraph p {
     font-size: 23px;
     color: #ffffff;
-    font-family: Roboto;
     font-weight: 300;
     padding-left: 20px;
     padding-top: 10px;
