--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -23,7 +23,7 @@
     <div class="flex-table row" role="rowgroup" *ngFor="let t of dataSource">
         <div class="flex-row body-cell first" role="cell">
             <div class="title-container" id="circle-container">
-                <i class="fa fa-circle" [ngClass]="t.colorClass | circleColor"></i>
+                <i class="fa fa-circle" [ngClass]="t.dueDay | circleColor"></i>
             </div>
             <div class="title-container">
                 <p class="action-item-name">{{ t.title }}</p>
