--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -26,13 +26,13 @@
                 <i class="fa fa-circle" [ngClass]="t.dueDay | circleColor"></i>
             </div>
             <div class="title-container">
-                <p class="action-item-name">{{ t.title }}</p>
-                <p class="action-item-name project-name">{{ t.projectName }}</p>
+                <p class="rendered action-item-name title">{{ t.title }}</p>
+                <p class="rendered action-item-name project-name">{{ t.projectName }}</p>
             </div>
         </div>
-        <div class="flex-row body-cell" role="cell">{{ t.type }}</div>
-        <div class="flex-row body-cell" role="cell">{{ t.completed }}%</div>
-        <div class="flex-row body-cell" role="cell">{{ t.dueDate | date: 'dd/MM/yyyy' }}</div>
-        <div class="flex-row body-cell" role="cell">{{ t.dueDay }}</div>
+        <div class="rendered flex-row body-cell" role="cell">{{ t.type }}</div>
+        <div class="rendered flex-row body-cell" role="cell">{{ t.completed }}%</div>
+        <div class="rendered flex-row body-cell" role="cell">{{ t.dueDate | date: 'dd/MM/yyyy' }}</div>
+        <div class="rendered flex-row body-cell" role="cell">{{ t.dueDay }}</div>
     </div>
 </div>
