--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,7 +1,3 @@
-* {
-    font-family: Roboto;
-}
-
 .menu-container {
     padding-bottom: 25px;
     display: flex;
@@ -18,7 +14,7 @@
     font-size: 12px;
     color: #ffffff;
     letter-spacing: 0.36px;
-    line-height: 1.2rem;
+    line-height: 1.2em;
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
