"create-item dialog"

--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -10,7 +10,7 @@
             <button class="filter assigned">Assigned to me X</button>
         </div>
         <div class="new-item-button">
-            <button class="add-item">+ new action item</button>
+            <button class="add-item" (click)="openDialog()">+ new action item</button>
         </div>
     </div>
     <div class="flex-table header" role="rowgroup">
