--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,5 @@ body {
     margin: 0;
     background-color: #dde4ec;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
