--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -30,9 +30,9 @@
                 <p class="action-item-name project-name">{{ t.projectName }}</p>
             </div>
         </div>
-        <div class="flex-row body-cell" role="cell">{{ t.type }}</div>
-        <div class="flex-row body-cell" role="cell">{{ t.completed }}%</div>
-        <div class="flex-row body-cell" role="cell">{{ t.dueDate | date: 'dd/MM/yyyy' }}</div>
-        <div class="flex-row body-cell" role="cell">{{ t.dueDay }}</div>
+        <div class="flex-row body-cell inner" role="cell">{{ t.type }}</div>
+        <div class="flex-row body-cell inner" role="cell">{{ t.completed }}%</div>
+        <div class="flex-row body-cell inner" role="cell">{{ (t.dueDate | date: 'dd/MM/yyyy') || '-' }}</div>
+        <div class="flex-row body-cell inner" role="cell">{{ t.dueDay }}</div>
     </div>
 </div>
