--- a/src/app/add-item/add-item.component.css
+++ b/src/app/add-item/add-item.component.css
@@ -1,5 +1,5 @@
 * {
-    font-size: 13px;
+    font-size: 14px;
     font-weight: normal;
     color: #979797;
 }
@@ -35,6 +35,7 @@ mat-form-field {
     line-height: 25px;
     border-radius: 1px;
     font-size: 10px;
+    margin: 2px;
 }
 
 .mat-raised-button:hover:enabled {
