--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -23,6 +23,6 @@
     </mat-dialog-content>
 </div>
 <mat-dialog-actions class="buttons">
-    <button class="mat-raised-button" (click)="close()">Close</button>
+    <button class="mat-raised-button close" (click)="close()">Close</button>
     <button class="mat-raised-button create" [disabled]="dialogForm.invalid" (click)="createActionItem()">Create<span class="fa-button" *ngIf="buttonSpinner"><i class="fa fa-spinner fa-spin"></i></span></button>
 </mat-dialog-actions>
