--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -3,20 +3,20 @@
     <mat-dialog-content [formGroup]="dialogForm">
         <mat-form-field>
             <input matInput placeholder="Action Item Name" formControlName="name" />
+            <mat-error *ngIf="dialogForm.get('name').hasError('required')" class="invalid-feedback">
+                Name is required.
+            </mat-error>
         </mat-form-field>
-        <div *ngIf="formControls.name.errors && formControls.name.touched">
-            <div *ngIf="formControls.name.errors.required" class="invalid-feedback">Name is required.</div>
-        </div>
         <mat-form-field>
             <mat-select formControlName="project" placeholder="Project">
                 <mat-option *ngFor="let project of projects" [value]="project">
                     {{ project.name }}
                 </mat-option>
             </mat-select>
+            <mat-error *ngIf="dialogForm.get('project').hasError('required')" class="invalid-feedback" class="invalid-feedback">
+                Project required.
+            </mat-error>
         </mat-form-field>
-        <div *ngIf="formControls.project.errors && formControls.project.touched">
-            <div *ngIf="formControls.project.errors.required" class="invalid-feedback">Project is required.</div>
-        </div>
         <mat-form-field class="datePicker">
             <input matInput [matDatepicker]="picker" placeholder="Due date" formControlName="dueDate" />
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -28,6 +28,6 @@
     </mat-dialog-content>
 </div>
 <mat-dialog-actions class="buttons">
-    <button class="mat-raised-button close" (click)="close()">Close</button>
+    <button class="mat-raised-button close" type="button" mat-button mat-dialog-close>Close</button>
     <button class="mat-raised-button create" [disabled]="dialogForm.invalid" (click)="createActionItem()">Create<span class="fa-button" *ngIf="buttonSpinner"><i class="fa fa-spinner fa-spin"></i></span></button>
 </mat-dialog-actions>
