"form validation message"

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -14,7 +14,7 @@
                 </mat-option>
             </mat-select>
             <mat-error *ngIf="dialogForm.get('project').hasError('required')" class="invalid-feedback" class="invalid-feedback">
-                Project required.
+                Project is required.
             </mat-error>
         </mat-form-field>
         <mat-form-field class="datePicker">
