--- a/src/app/action-items/action-items.component.css
+++ b/src/app/action-items/action-items.component.css
@@ -76,9 +76,9 @@
 
 .t-body {
     margin-top: 3px;
-    height: 550px;
     overflow-y: auto;
     overflow-x: hidden;
+    height: 100vh;
 }
 
 .flex-table {
