--- a/src/app/add-item/add-item.component.css
+++ b/src/app/add-item/add-item.component.css
@@ -6,6 +6,7 @@
     
     mat-form-field {
         width: 95%;
+        margin-bottom: 10px;
     }
     
     mat-dialog-content {
@@ -23,6 +24,10 @@
     
     .datePicker {
         width: 30%;
+    }
+    
+    .typedValueColor {
+        color: rgba(0, 0, 0, 0.87);
     }
     
     .dialogTitle {
