--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -2,7 +2,7 @@
     <h2 class="dialogTitle" mat-dialog-title>{{ title }}</h2>
     <mat-dialog-content [formGroup]="dialogForm">
         <mat-form-field>
-            <input matInput placeholder="Action Item Name" formControlName="name" />
+            <input matInput class="typedValueColor" placeholder="Action Item Name" formControlName="name" />
             <mat-error *ngIf="dialogForm.get('name').hasError('required')" class="invalid-feedback">
                 Name is required.
             </mat-error>
@@ -18,16 +18,16 @@
             </mat-error>
         </mat-form-field>
         <mat-form-field class="datePicker">
-            <input matInput [matDatepicker]="picker" placeholder="Due date" formControlName="dueDate" />
+            <input matInput [matDatepicker]="picker" class="typedValueColor" placeholder="Due date" formControlName="dueDate" />
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
         <mat-form-field class="description">
-            <textarea matInput placeholder="Description" formControlName="description"></textarea>
+            <textarea cdkTextareaAutosize #autosize="cdkTextareaAutosize" matInput class="typedValueColor" placeholder="Description" formControlName="description"></textarea>
         </mat-form-field>
     </mat-dialog-content>
 </div>
 <mat-dialog-actions class="buttons">
     <button class="mat-raised-button close" type="button" mat-button mat-dialog-close>Close</button>
-    <button class="mat-raised-button create" [disabled]="dialogForm.invalid" (click)="createActionItem()">Create<span class="fa-button" *ngIf="buttonSpinner"><i class="fa fa-spinner fa-spin"></i></span></button>
+    <button class="mat-raised-button create" [disabled]="dialogForm.invalid" (click)="createActionItem()">Create<span class="fa-button" *ngIf="isCreatingActionItem"><i class="fa fa-spinner fa-spin"></i></span></button>
 </mat-dialog-actions>
