--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,11 @@
 
 html,
 body {
-    height: 100%;
+    min-height: 100vh;
 }
 
 body {
     margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: #dde4ec;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
