--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,12 @@
 
 html,
 body {
-    min-height: 100vh;
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
 }
 
 body {
-    margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: #dde4ec;
 }
