--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <div class="navbar-title">
             <div class="navbar-icon"></div>
             <div class="navbar-paragraph">
-                <p>All Projects</p>
+                <p class="navbar-parag">All Projects</p>
             </div>
         </div>
     </div>
